# Myfirstproject

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
tests/unit/: test_demo.py
