[project]
name = "tdd-template"
version = "0.1.0"
description = "Professional TDD Python Project Template"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
explicit_package_bases = true
ignore_missing_imports = true
